# camp-osprey

./: .gitignore  AGENTS.md  README.md  parks.json  pyproject.toml
.claude/: settings.local.json
app-extension/: .env.development  .env.example  .env.production  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json  wxt.config.ts
app-extension/entrypoints/: background.ts  content.ts
app-extension/scripts/: clean-output.mjs  obfuscate-output.mjs  zip-secure-output.mjs
app-extension/src/: config.ts  dates.ts  debugLog.ts  extensionConfig.ts  logSync.ts  paymentCrypto.ts  protocol.ts  serverApi.ts  startAuthGate.ts  storage.ts  tripStore.ts  types.ts  warnings.ts
app-web/: README.md  astro.config.mjs  package-lock.json  package.json
app-web/.astro/: data-store.json  settings.json
campsite/: api.py  booker.py  cli.py  models.py  notifier.py  scanner.py
docs/: api-notes.md  booking-flow.py  extension-scan-rate-control.md  extension-security-hardening.md  site-automation-notes.md  user-guide.md
extension/: .env.development  .env.production  manifest.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
python/: config.yaml.example  debug_filters.py  debug_review_page.py  pyproject.toml
python/campsite/: config.py  models.py  scanner.py
python/tests/: test_config.py  test_models.py  test_notifier.py
server/: .dockerignore  .env.example  .gitignore  README.md  drizzle.config.ts  package-lock.json  package.json
tests/: test_models.py  test_scanner.py
(+284 files in other folders)
